welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:9: error: ';' expected but 'else' found.
 		     else if (isFacingTrail == false ) {
                     ^